add basic table to display results

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,18 @@
   <body>
     <div id="head">Hello</div>
     <div id="main_container">
-    
+        <table id="games">
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Game</th>
+                    <th>Num Players</th>
+                    <th>Best Num Players</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
   </body>
 </html>
