load mulitple BGG pages

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,6 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
   <body>
-      <div id="head">Hello</div>
       <div id="main_container_react"></div>
 
       <!-- Load React. -->
@@ -14,6 +13,7 @@
       <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
       <!-- quick and dirty JSX support -->
+      <!-- TODO remove this and transpile the code -->
       <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
       <!-- My React Components -->
