split React from Data modules & add simple form

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
       <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
       <!-- My React Components -->
-      <script type="text/babel" src="bgg_mine.js"></script>
+      <script type="text/javascript" src="bgg_mine.js"></script>
+      <script type="text/babel" src="index.js"></script>
   </body>
 </html>
