--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
       <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
       <!-- My React Components -->
-      <script type="text/javascript" src="bgg_mine.js"></script>
-      <script type="text/babel" src="index.js"></script>
+      <script type="module" src="index-compiled.js"></script>
+      <!--<script type="text/babel" src="index.js"></script>-->
   </body>
 </html>
