Get bootstrap components working for form

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>BGG Searching</title>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-  </head>
+    <style type="text/css">
+        /* Hack Bootstrap to allow me to do a labeled checkbox appended to input*/
+        .input-group-text input[type=checkbox].form-check-input {
+            margin-top: .3rem;
+        }
+    </style>
+</head>
   <body>
       <div id="main_container_react"></div>
 
