added cards (panels) to layout

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,10 @@
         .input-group-text input[type=checkbox].form-check-input {
             margin-top: .3rem;
         }
+
+        .form-group.input-group-prepend {
+            margin-bottom: 0;
+        }
     </style>
 </head>
   <body>
